# physpract

./: README.md  pyproject.toml  requirements.txt  setup.py
physpract/: __init__.py
src/physpract/: __init__.py  helpers.py  math.py  tools.py  uncertainties.py
test/: document.tex  test.ipynb  test.py
