[project]
name = "physpract"
version = "0.1.0b1"
authors = [
  { name="Thaleius", email="dev@thaleius.de" },
]
description = "A package created to help with writing the protocols for the physical practicals at the TU Berlin."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "scipy>=1.15.1",
  "regex>=2025.11.3"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/thaleius/physpract"
Issues = "https://github.com/thaleius/physpract/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"